--- a/templates/videoVimeo/videoVimeo.html
+++ b/templates/videoVimeo/videoVimeo.html
@@ -20,11 +20,7 @@
     <h2 class='title'>FWQ2021</h2>
     <h3 class='title'>Example of site work with vimeo</h3>
     <p class='vimeo'><iframe src="https://player.vimeo.com/video/535650264"
-    width="640" height="298" frameborder="0" allow="autoplay; fullscreen;
-    picture-in-picture" allowfullscreen></iframe>
-
-<!--    <p class='vimeo'><iframe src="https://player.vimeo.com/video/535464304"-->
-<!--    width="640" height="298" frameborder="0" allow="autoplay;-->
-<!--    fullscreen; picture-in-picture" allowfullscreen></iframe>-->
+    width="640" height="298" frameborder="0" allow="autoplay;
+    fullscreen picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
